--- a/style.css
+++ b/style.css
@@ -10,39 +10,44 @@
     --fs-xl: clamp(2rem, 1rem + 6vw, 4.5rem);
     --fs-800: 2rem;
     --fs-600: 1.5rem;
-    --fs-400: 1.5rem;
+    --fs-500: 1.25;
+    --fs-400: 1rem;
 }
 
-
-
-@media (width < 992px) {
+@media (width > 1200px) {
     :root{
+        --fs-800: 2.75rem;
+        --fs-600: 2.25rem;
+        --fs-500: 2rem;
+        --fs-400: 1.75rem;
+    }
+}
+
+@media (width > 1024px) {
+    :root {
+        --fs-800: 2.5rem;
+        --fs-600: 2rem;
+        --fs-500: 1.75rem;
         --fs-400: 1.5rem;
     }
 }
 
-@media (width < 768px) {
-    :root{
-        --fs-800: 1.5rem;
-        --fs-600: 1.5rem;
-        --fs-400: 1.5rem;
-    }
-}
-
-@media (width < 600px) {
-    :root{
-        --fs-800: 1.15rem;
-        --fs-600: 1.15rem;
+@media (width > 768px) {
+    :root {
+        --fs-800: 2.25rem;
+        --fs-600: 1.75rem;
+        --fs-500: 1.5rem;
         --fs-400: 1.25rem;
     }
 }
+
 
 body {
     background-color: #333;
     color: white;
     font-size: var(--fs-400);
     min-height: 100vh;
-    padding: 1.5em;
+    padding: 1rem;
     display: grid;
     justify-content: center;
 }
@@ -54,20 +59,22 @@ body {
 }
 
 #countries-container {
+    max-width: 90vw;
     display: grid;
-    gap: clamp(0.5rem, 2vw, 1.5rem);
+    gap: clamp(0.3rem, 2vw, 1rem);
 
-    grid-template-columns: repeat(6, 1fr);
-    padding: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    grid-auto-rows: clamp(6rem, 6rem + 5vw, 10rem);
+    padding: 0.2rem;
 }
 
 .card {
-    min-height: 9vh;
-    font-size: var(--fs-400);
+    font-size: var(--fs-500);
+    text-align: center;
     background-color: #444444;
     border: 2px solid rgb(35, 35, 35);
     border-radius: 6px;
-    padding: 1vh 1vw;
+    padding: 0.3rem;
 }
 
 .card:hover {
@@ -76,11 +83,19 @@ body {
 
 .hidden {
     opacity: 0;
-    transition: opacity 1s;
+    filter: blur(5px);
+    transition: all 1s, filter 0.5s;
 }
 
 .show {
+    filter: none;
     opacity: 1;
+}
+
+@media (prefers-reduced-motion) {
+    .hidden{
+        transition: none;
+    }
 }
 
 .loading {
@@ -109,6 +124,8 @@ body {
 
 .wrapper a {
     color: white;
+    width: fit-content;
+    justify-self: center;
     padding-bottom: clamp(0.5rem, 3vw, 2rem);
     font-size: var(--fs-600);
 }
@@ -125,28 +142,54 @@ body {
     font-size: var(--fs-600);
 }
 
-@media (width < 1200px) {
-    #countries-container {
-        grid-template-columns: repeat(5, 1fr);
-    }   
+img{
+    font-style: italic;
+    background-repeat: no-repeat;
+    background-size: cover;    
+    max-width:100%;
+    height: auto;
+    shape-margin: 1rem;
 }
 
-@media (width < 992px) {
-    #countries-container {
-        grid-template-columns: repeat(4, 1fr);
-    }
+dialog{
+    background-color: #202020;
+    margin: auto;
+    color: white;
+    border: 2px solid gray;
+    border-radius: 8px;
 }
 
-@media (width < 768px) {
-    #countries-container {
-        grid-template-columns: repeat(3, 1fr);
-
-    }
+.country-data-container{
+    display: grid;
+    gap: 0.4rem;
+    text-align: center;
 }
 
-@media (width < 600px) {
-    #countries-container {
-        grid-template-columns: repeat(2, 1fr);
+.country-data-container h2{
+    font-size: var(--fs-800);
+}
 
-    }
+.country-data-container h4{
+    font-size: var(--fs-600);
+}
+
+.country-data-container h6{
+    font-size: var(--fs-400);
+}
+
+.country-data-container p{
+    font-size: var(--fs-400);
+}
+
+.svg-container{
+    max-width: 20rem;
+    justify-self: center;
+}
+
+#closeBtn{
+    font-size: var(--fs-600);
+    color: white;
+    background-color: #202020;
+    border-radius: 6px;
+    padding: 0.3rem;
 }
