--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 @media (width > 1200px) {
-    :root{
+    :root {
         --fs-800: 2.75rem;
         --fs-600: 2.25rem;
         --fs-500: 2rem;
@@ -40,7 +40,6 @@
         --fs-400: 1.25rem;
     }
 }
-
 
 body {
     background-color: #333;
@@ -68,6 +67,84 @@ body {
     padding: 0.2rem;
 }
 
+#sort-by {
+    width: var(--fs-800);
+    color: #333;
+}
+
+.input-container{
+    display: flex;
+    gap: 0.5rem;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem;
+}
+
+.input-container input {
+    width: clamp(10em, 10rem + 30vw, 75vw);
+    font-size: clamp(1rem, 1rem + 1vw, 2.5rem);
+    color: white;
+    background-color: hsl(0, 0%, 35%);
+    padding: 0.2rem 0.6rem;
+    border: 2px solid;
+    border-radius: 25px;
+}
+
+.buttons-container {
+    display: flex;
+    gap: 0.5rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0.2rem;
+}
+
+.buttons-container button {
+    font-size: var(--fs-500);
+    color: white;
+    background-color: hsl(0, 0%, 35%);
+    padding: 0.2rem 0.6rem;
+    border: 2px solid;
+    border-radius: 25px;
+}
+
+.buttons-container button:hover {
+    background-color: hsl(0, 0%, 25%);
+    color: silver;
+}
+
+.buttons-container svg {
+    color: white;
+}
+
+#sort-by{
+    display: grid;
+    place-items: center;
+    padding: 0.1rem 0.2rem;
+    border: 2px solid white;
+}
+
+#sort-by:hover{
+    background-color: hsl(0, 0%, 25%);
+    color: silver;
+}
+
+.selected {
+    background-color: hsl(0, 0%, 25%) !important;
+    color: silver !important;
+}
+
+.search-icon-container {
+    width: clamp(1rem, 1rem + 2vw, 3rem);
+    color: white;
+    background-color: transparent;
+    border: none;
+}
+
+.search-icon-container:hover {
+    color: hsl(0, 0%, 70%);
+}
+
 .card {
     font-size: var(--fs-500);
     text-align: center;
@@ -93,7 +170,7 @@ body {
 }
 
 @media (prefers-reduced-motion) {
-    .hidden{
+    .hidden {
         transition: none;
     }
 }
@@ -138,20 +215,20 @@ body {
     font-size: var(--fs-800);
 }
 
-.wrapper p{
+.wrapper p {
     font-size: var(--fs-600);
 }
 
-img{
+img {
     font-style: italic;
     background-repeat: no-repeat;
-    background-size: cover;    
-    max-width:100%;
+    background-size: cover;
+    max-width: 100%;
     height: auto;
     shape-margin: 1rem;
 }
 
-dialog{
+dialog {
     background-color: #202020;
     margin: auto;
     color: white;
@@ -159,34 +236,47 @@ dialog{
     border-radius: 8px;
 }
 
-.country-data-container{
+dialog[open] {
+    animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.country-data-container {
     display: grid;
     gap: 0.4rem;
     text-align: center;
 }
 
-.country-data-container h2{
+.country-data-container h2 {
     font-size: var(--fs-800);
 }
 
-.country-data-container h4{
+.country-data-container h4 {
     font-size: var(--fs-600);
 }
 
-.country-data-container h6{
+.country-data-container h6 {
     font-size: var(--fs-400);
 }
 
-.country-data-container p{
+.country-data-container p {
     font-size: var(--fs-400);
 }
 
-.svg-container{
+.svg-container {
     max-width: 20rem;
     justify-self: center;
 }
 
-#closeBtn{
+#closeBtn {
     font-size: var(--fs-600);
     color: white;
     background-color: #202020;
